# decky-file-explorer

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES  build-plugin.py  dependencies.txt  dev_run.py  jsconfig.json  main.py  package.json  plugin.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
backend/: Dockerfile  Makefile  entrypoint-old.sh  entrypoint.sh  filesystem.py  server.py
backend/tests/: conftest.py  test_directories.py  test_files.py  test_filesystem.py  test_handlers.py  test_main_plugin.py  test_objects.py  test_security.py  test_server.py  test_streaming.py  test_zip.py
backend/webui/: app.js  common.css  index.html  styles.css
backend/webui/scripts/: app.js
decky/: __init__.py  decky.py
defaults/py_modules/: filesystem.py  gamerecording.py  server.py  shared_settings.py  utils.py
defaults/py_modules/webui/: common.css  index.html
scripts/: build-plugin.py  build-plugin.sh  dependencies.txt  sync.sh
settings/: __init__.py  manager.py
src/: index.tsx
src/components/: BaseDirSettings.tsx  Content.tsx  CredentialSettings.tsx  InactivityTimeoutSettings.tsx  PortSettings.tsx  SettingsModal.tsx
src/components/hooks/: useBaseDirSetting.ts  useCredentialSetting.ts  useInactivityTimeoutSetting.ts  usePortSetting.ts  useTimedFeedback.ts
src/contexts/: ServerAPIContext.tsx
src/utils/: ErrorBoundary.tsx  ServerAPI.ts
tests/: conftest.py  test_files.py  test_gamerecording.py  test_handlers.py  test_main_plugin.py  test_objects.py  test_security.py  test_server.py  test_streaming.py  test_zip.py
(+11 files in other folders)
